# spellcast_solver

./: Cargo.toml
data/boards/: basic_board.txt  small_board.txt
data/dictionaries/: test_1.txt
src/: board.rs  double_stack.rs  errors.rs  letter.rs  lib.rs  main.rs  word_result.rs  word_tree.rs
