[package]
name = "spellcast_solver"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "For solving discord Spellcast boards. Was my first ever Rust project, so code isn't great."
repository = "https://github.com/vLiimes/spellcast_solver"

[dependencies]
crossbeam = "0.8.4"

