[package]
name = "spellcast_solver"
version = "0.4.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "For solving discord Spellcast boards. Was my first ever Rust project, so code isn't great."
repository = "https://github.com/vLiimes/spellcast_solver"

[dependencies]
crossbeam = "0.8.4"
serde = {version = "1.0.217", features=["derive"]}

